test_regress/t/t_order_blkloopinit_bad.out
%Error-BLKLOOPINIT: t/t_order_blkloopinit_bad.v:21:19: Unsupported: Delayed assignment to array inside for loops (non-delayed is ok - see docs)
   21 |          array[i] <= 0;   
      |                   ^~
                    ... For error description see https://verilator.org/warn/BLKLOOPINIT?v=latest
%Error: Exiting due to
